fixed social link spacing

--- a/less/footer.less
+++ b/less/footer.less
@@ -8,9 +8,9 @@
     }
     .connections {
         display: flex;
-        max-width: 80%;
-        padding: 0px 100px 0 100px;        margin: auto;
-        // font-size: 1.6rem;
+        max-width: 10%;
+        margin: auto;
+        justify-content: center;
         .icon-footer{
             
             margin: auto;
