--- a/less/icon.less
+++ b/less/icon.less
@@ -10,6 +10,8 @@
     font-size: 2.8rem;
     font-weight: bold;
   }
+
+
   .icon-description {
     color: red;
     margin: 10px 30px;
@@ -50,6 +52,16 @@
     .fa-yarn {
       color: #2c8ebb;
     }
+  }
+
+  .effect:hover {
+    opacity: 0.8;
+  }
+  .effect:active {
+    transform:scale(0.9)
+  }
+  .effect:focus {
+    outline: none;
   }
   .css3 {
     width: 36px;
